app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;
@layer base {
  :root {
    --background: 30 36% 96%;
    --foreground: 252 7% 13%;
    --card: 0 0% 100%;
    --card-foreground: 0 0% 3.9%;
    --popover: 0 0% 100%;
    --popover-foreground: 0 0% 3.9%;
    --primary: 252 7% 13%;
    --primary-foreground: 0 0% 100%;
    --secondary: 30 36% 96%;
    --secondary-foreground: 252 7% 13%;
    --muted: 0 0% 96.1%;
    --muted-foreground: 23 6% 57%;
    --accent: 0 0% 96.1%;
    --accent-foreground: 0 0% 9%;
    --destructive: 7 58% 50%;
    --destructive-foreground: 0 0% 100%;
    --border: 0 0% 89.8%;
    --input: 0 0% 89.8%;
    --ring: 0 0% 3.9%;
    --chart-1: 12 76% 61%;
    --chart-2: 173 58% 39%;
    --chart-3: 197 37% 24%;
    --chart-4: 43 74% 66%;
    --chart-5: 27 87% 67%;
    --radius: 0.5rem;
  }
  .dark {
    --background: 0 0% 3.9%;
    --foreground: 0 0% 98%;
    --card: 0 0% 3.9%;
    --card-foreground: 0 0% 98%;
    --popover: 0 0% 3.9%;
    --popover-foreground: 0 0% 98%;
    --primary: 0 0% 98%;
    --primary-foreground: 0 0% 9%;
    --secondary: 0 0% 14.9%;
    --secondary-foreground: 0 0% 98%;
    --muted: 0 0% 14.9%;
    --muted-foreground: 0 0% 63.9%;
    --accent: 0 0% 14.9%;
    --accent-foreground: 0 0% 98%;
    --destructive: 0 62.8% 30.6%;
    --destructive-foreground: 0 0% 98%;
    --border: 0 0% 14.9%;
    --input: 0 0% 14.9%;
    --ring: 0 0% 83.1%;
    --chart-1: 220 70% 50%;
    --chart-2: 160 60% 45%;
    --chart-3: 30 80% 55%;
    --chart-4: 280 65% 60%;
    --chart-5: 340 75% 55%;
  }
}

@layer components {
  .body1 {
    @apply text-[14px] leading-[150%] tracking-normal;
  }
  .body2 {
    @apply text-xs leading-[150%] tracking-normal;
  }
  .header3 {
    @apply text-[16px] font-bold leading-[150%] tracking-normal;
  }
  .menu-label {
    @apply body1 px-5 py-3 text-grey-500;
  }
  .menu-content {
    @apply z-50 max-h-[300px] min-w-[8rem] overflow-y-auto overflow-x-hidden rounded-md border bg-popover text-popover-foreground shadow-md;
  }
  .menu-separator {
    @apply mx-5 h-px bg-muted text-grey-100;
  }
  .menu-item {
    @apply body1 relative flex cursor-default select-none items-center rounded-sm px-5 py-3 font-normal outline-none transition-colors focus:bg-accent focus:text-accent-foreground;
  }
}

@layer base {
  * {
    @apply border-border;
  }
  body {
    @apply bg-background text-foreground;
  }
  h1 {
    @apply text-[32px] font-bold leading-[120%] tracking-normal;
  }
  h2 {
    @apply text-xl font-bold leading-[120%] tracking-normal;
  }
  h3 {
    @apply header3;
  }
  p,
  input {
    @apply body1;
  }
}

